<resources>
    <string name="app_name">GuitarLessons</string>
    <!--activity_main-->
    <string name="email">Email:</string>
    <string name="password">Пароль:</string>
    <string name="create_account"><u>Создать аккаунт</u></string>
    <string name="log_in">Войти</string>
    <string name="user_name">Логин:</string>
    <string name="log_out">Выйти</string>

    <string name="error_3003">Неправильный логин или пароль</string>
    <string name="error_3033">Пользователь с таким email уже существует</string>
    <string name="error_3040">Email введен неверно</string>
    <string name="unknown_error">Произошла неизвестная ошибка</string>
    <string name="error_3006">Заполните все поля</string>
    <string name="empty_field">Заполните поле</string>
    <string name="short_password">Пароль должен быть не менее 7 символов </string>
    <string name="different_passwords">Пароли не совпадают</string>
    <string name="confirm_password">Повторите пароль:</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="courses">Курсы</string>
    <string name="songs">Песни</string>
    <string name="favorite">Избранное</string>
    <string name="lessons">Уроки</string>
    <string name="tools">Инструменты</string>
    <string name="metronome">Метроном</string>
    <string name="no_data">Нет данных</string>
    <string name="tab">tabs</string>
    <string name="chords">chords</string>
    <string name="notes">notes</string>
    <string name="filter_chords">Акк</string>
    <string name="filter_tabs">Табы</string>
    <string name="delete_favorite">Удалено из избранного</string>
    <string name="add_favorite">Добавлено в избранное</string>
    <string name="all">Все</string>
    <string name="news">Новости</string>
    <string name="exit">Выход</string>
    <string name="settings">Настройки</string>
    <string name="language">Язык</string>
    <string name="languageList">languageList</string>
    <string name="interface_language">Язык интерфейса</string>
    <string name="about_app">О приложении</string>
    <string name="send_email">Отправить email</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="restore_password">Восстановление пароля</string>
    <string name="check_email">Проверьте почту</string>
    <string name="error_3020">Пользователя с таким email не существует</string>
    <string name="seek_bar_min_value">20</string>
    <string name="shares_in_tact">Долей в такте</string>
    <string name="tunings">Строи</string>
    <string name="first_str">1-ая струна: </string>
    <string name="second_str">2-ая струна: </string>
    <string name="third_str">3-я струна: </string>
    <string name="fourth_str">4-ая струна: </string>
    <string name="fifth_str">5-ая струна: </string>
    <string name="sixth_str">6-ая струна: </string>
    <string name="no_internet">Проверьте подключение сети</string>

    <string-array name="language_array">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string-array name="language_array_values">
        <item>ru</item>
        <item>en</item>
    </string-array>

    <string-array name="beats_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
</resources>
