<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/courses"
            android:icon="@drawable/ic_guitar_black_shape_gray"
            android:title="@string/courses" />
        <item
            android:id="@+id/songs"
            android:icon="@drawable/ic_musical_note_gray"
            android:title="@string/songs" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favorite_gray"
            android:title="@string/favorite" />
    </group>
    <item android:title="@string/tools">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/metronome"
                    android:icon="@drawable/ic_guitar_black_shape_gray"
                    android:title="@string/metronome" />
            </group>
        </menu>
    </item>

</menu>