<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/filters_height"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="@dimen/cardView_filter_radius">

    <RadioGroup
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/layout_margin"
            android:button="@android:color/transparent"
            android:checked="true"
            android:text="@string/all"
            android:textColor="@drawable/filter_selector" />

        <RadioButton
            android:id="@+id/radio_chords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:button="@android:color/transparent"
            android:text="@string/filter_chords"
            android:textColor="@drawable/filter_selector" />

        <RadioButton
            android:id="@+id/radio_tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_margin"
            android:layout_marginStart="@dimen/layout_margin"
            android:button="@android:color/transparent"
            android:text="@string/filter_tabs"
            android:textColor="@drawable/filter_selector" />
    </RadioGroup>

</android.support.v7.widget.CardView>