<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/cardView_margin"
    android:layout_marginEnd="@dimen/cardView_margin"
    android:layout_marginStart="@dimen/sub_list_margin"
    android:layout_marginTop="@dimen/cardView_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/textview_margin"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/textview_margin"
            android:layout_weight=".5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/content_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_students_cap" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/textview_margin"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_types_margin"
                android:background="@drawable/oval_shape"
                android:text="@string/tab"
                android:visibility="gone" />

            <TextView
                android:id="@+id/chords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_types_margin"
                android:background="@drawable/oval_shape"
                android:text="@string/chords"
                android:visibility="gone" />

            <TextView
                android:id="@+id/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_types_margin"
                android:background="@drawable/oval_shape"
                android:text="@string/notes"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
